Bug 1145997 - Suppress GC in debugger GC callback. r=sfink, a=test-only